@@ -86,7 +86,7 @@
  
  #include <stddef.h>		/* size_t */
  
-@@ -196,8 +198,10 @@ enum {
+@@ -197,8 +199,10 @@ enum {
  	EHBI_LAST
  };
  
