@@ -34,9 +34,11 @@ int test_dec_corner_case(int verbose)
 
 	bi1.bytes = bytes_buf1;
 	bi1.bytes_len = BILEN;
+	bi1.sign = 0;
 
 	bi2.bytes = bytes_buf2;
 	bi2.bytes_len = BILEN;
+	bi2.sign = 0;
 
 	err = ehbi_set_decimal_string(&bi1, str_1, strlen(str_1));
 	err += ehbi_set_decimal_string(&bi2, str_2, strlen(str_2));
