@@ -27,26 +27,32 @@ int test_scenario_mul_mod(int verbose)
 
 	bx.bytes = xb;
 	bx.bytes_len = 16;
+	bx.sign = 0;
 	bx.bytes_used = 0;
 
 	by.bytes = yb;
 	by.bytes_len = 16;
+	by.sign = 0;
 	by.bytes_used = 0;
 
 	bz.bytes = zb;
 	bz.bytes_len = 16;
+	bz.sign = 0;
 	bz.bytes_used = 0;
 
 	bresult.bytes = resb;
 	bresult.bytes_len = 16;
+	bresult.sign = 0;
 	bresult.bytes_used = 0;
 
 	bquot.bytes = quotb;
 	bquot.bytes_len = 16;
+	bquot.sign = 0;
 	bquot.bytes_used = 0;
 
 	brem.bytes = remb;
 	brem.bytes_len = 16;
+	brem.sign = 0;
 	brem.bytes_used = 0;
 
 	x = 20151125;
