@@ -30,10 +30,12 @@ int test_set(int verbose)
 
 	a_bigint.bytes = a_bytes;
 	a_bigint.bytes_len = 10;
+	a_bigint.sign = 0;
 	a_bigint.bytes_used = 0;
 
 	b_bigint.bytes = b_bytes;
 	b_bigint.bytes_len = 10;
+	b_bigint.sign = 0;
 	b_bigint.bytes_used = 0;
 
 	err = ehbi_set_l(&a_bigint, three);
