@@ -34,12 +34,15 @@ int test_subtract(int verbose)
 
 	bi1.bytes = bytes_buf1;
 	bi1.bytes_len = 20;
+	bi1.sign = 0;
 
 	bi2.bytes = bytes_buf2;
 	bi2.bytes_len = 20;
+	bi2.sign = 0;
 
 	bi3.bytes = bytes_buf3;
 	bi3.bytes_len = 14;
+	bi3.sign = 0;
 
 	err = ehbi_set_hex_string(&bi1, str_1, strlen(str_1));
 	err += ehbi_set_hex_string(&bi2, str_2, strlen(str_2));
